@@ -21,7 +21,7 @@
 		-->
 		<PROPERTY NAME="electricKeys" VALUE=")abcdefghijklmnopqrstuvwxyz" />
 	</PROPS>
-	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE" ESCAPE="\">
+	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- Comments -->
 		<EOL_SPAN TYPE="COMMENT2">#!</EOL_SPAN>
 		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
@@ -42,35 +42,35 @@
 		<MARK_PREVIOUS TYPE="KEYWORD2" MATCH_TYPE="OPERATOR">=</MARK_PREVIOUS>
 
 		<!-- weird stuff -->
-		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC">
+		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC" ESCAPE="\">
 			<BEGIN>$((</BEGIN>
 			<END>))</END>
 		</SPAN>
-		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC">
+		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC" ESCAPE="\">
 			<BEGIN>$(</BEGIN>
 			<END>)</END>
 		</SPAN>
-		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC">
+		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC" ESCAPE="\">
 			<BEGIN>$[</BEGIN>
 			<END>]</END>
 		</SPAN>
-		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC">
+		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC" ESCAPE="\">
 			<BEGIN>`</BEGIN>
 			<END>`</END>
 		</SPAN>
 
 		<!-- Literals -->
-		<SPAN TYPE="LITERAL1" DELEGATE="LITERAL">
+		<SPAN TYPE="LITERAL1" DELEGATE="LITERAL" ESCAPE="\">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
-		<SPAN TYPE="LITERAL1" ESCAPE="\">
+		<SPAN TYPE="LITERAL1">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
 		</SPAN>
 
 		<!-- Readins -->
-		<SPAN_REGEXP HASH_CHAR="&lt;&lt;" TYPE="LITERAL1" DELEGATE="LITERAL">
+		<SPAN_REGEXP HASH_CHAR="&lt;&lt;" TYPE="LITERAL1" DELEGATE="LITERAL" ESCAPE="\">
 			<BEGIN><![CDATA[<<[\p{Space}'"]*([\p{Alnum}_]+)[\p{Space}'"]*]]></BEGIN>
 			<END AT_LINE_START="TRUE">$1</END>
 		</SPAN_REGEXP>
